# pro22kadai-image

./: .gitignore  Cargo.toml  Gemfile  Makefile  README.md  lambda_function.py  lambda_function.rb  test
images/: daruma_padd_ex.xcf
src/: DecidedValue.rs  adjacent_points.rs  aws_socket.rs  binarization.rs  convert.rs  coordinate.rs  corner_detector.rs  get_adjacent.rs  get_adjacent2.rs  get_bace64_from_url.rs  get_base64_from_url.rs  image_reader.rs  labelling.rs  lib.rs  main.rs  merge_points.rs  merge_points2.rs  merge_points_2.rs  outline.rs  png_converter.rs  png_reader.rs  print.rs  vec_to_json.rs
