[package]
name = "procon_image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
image = "0.24.3"
rutie = "0.8.4"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"

[lib]
name = "procon_image"
crate-type = ["cdylib"]
