[package]
name = "procon_image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
image = "0.24.4"
lambda_runtime = "0.7.0"
serde = "1.0.145"
serde_json = "1.0.86"
tokio = { version = "1.21.2", features = ["full"] }

# [lib]
# name = "procon_image"
# crate-type = ["cdylib"]
