[package]
name = "procon_image"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
image = "0.24.4"
axum = "0.5.11"
axum-aws-lambda = "0.1.0"
lambda_http = "0.5.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }

# [lib]
# name = "procon_image"
# crate-type = ["cdylib"]
